# pillai_physics_engine

./: .gitignore  CMakeLists.txt  PhysicsEngine.cpp  README.md  build.bat  setup.bat
engine/: EventHandler.cpp  EventHandler.hpp  ForceRegistry.cpp  ForceRegistry.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  Project.cpp  Project.hpp
engine/contacts/: ContactResolver.cpp  ContactResolver.hpp  ObjectContact.cpp  ObjectContact.hpp
engine/force_generators/: ForceDrag.cpp  ForceDrag.hpp  ForceGravity.cpp  ForceGravity.hpp  IForceGenerator.hpp
engine/helpers/: Clock.hpp  DebugMacros.hpp  MyMath.hpp
engine/physics_objects/: IPhysicsObject.hpp  PhysicsBox.cpp  PhysicsBox.hpp  PhysicsSphere.cpp  PhysicsSphere.hpp
